# hackathon

./: .env.dev  .env.example  README.md  docker-compose.yaml
frontend/: Dockerfile  package.json
webhook_bot/: .env.dev  docker-compose.yaml  pyproject.toml
webhook_bot/src/: alembic.ini
webhook_bot/src/app/: keyclok.py  sa.py
webhook_bot/src/app/adapters/sqlalchemy_db/: __init__.py  db.py  models.py
webhook_bot/src/app/api/: root.py  webhook.py
webhook_bot/src/app/api/admin/: admin.py  html.py
webhook_bot/src/app/api/auth/: users.py
webhook_bot/src/app/application/diagram/: ploting.py
webhook_bot/src/app/application/models/: telegram_user.py
webhook_bot/src/app/application/predict/: mapper.py  processing_tables.py  processing_user_requests.py
webhook_bot/src/app/application/url_builder/: builder.py
webhook_bot/src/app/bot/: __init__.py  executor.py  lifespan.py  main.py  middleware.py  router.py
webhook_bot/src/app/bot/callbalck/: remaining_diagram.py
webhook_bot/src/app/bot/commands/: data.json  json_pack.py  predict.py  remaining.py  start.py
webhook_bot/src/app/bot/data/: remaining_data.py
webhook_bot/src/app/bot/keyboard/: commands_kb.py
webhook_bot/src/app/config/: settings.py
webhook_bot/src/app/main/: __init__.py  auth.py  kc.py  keycloak_provider.py  routes.py  template.py  typed.py  web.py
webhook_bot/src/app/static/css/: main.css
webhook_bot/src/app/static/js/: kc.js
webhook_bot/src/app/templates/: auth.html  users.html
webhook_bot/src/infrastructure/: Dockerfile  Dockerfile.bot  Dockerfile.migrations  Dockerfile.web
(+44 files in other folders)
