[tool.poetry]
name = "webhook-bot"
version = "0.1.0"
description = ""
authors = ["Vlad Moskvitin <sevenamber@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.7.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.2"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}
asyncpg = "^0.29.0"
jinja2 = "^3.1.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
pillow = "^10.3.0"
tabulate = "^0.9.0"
python-keycloak = "^4.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
